# python-plugin

./: .coverage  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  publish.yml
hooks/: _common.py  hooks.json  posttooluse-mypy.py  posttooluse-pytest.py  posttooluse-ruff.py  posttooluse-test-required.py  posttooluse-uv-lock.py  pre-commit-new-file-tests.py
skills/python/: SKILL.md
skills/python-mypy/: SKILL.md
skills/python-pypi/: SKILL.md
skills/python-pytest/: SKILL.md
skills/python-ruff/: SKILL.md
skills/python-uv/: SKILL.md
tests/: conftest.py  test_common.py  test_hook_mypy.py  test_hook_pytest.py  test_hook_ruff.py  test_hook_test_required.py  test_hook_uv_lock.py  test_hooks_inprocess.py  test_pre_commit_new_file_tests.py
