[project]
name = "claude-python-plugin"
version = "0.1.0"
description = "Claude Code plugin: ruff + mypy + pytest + uv hooks and Python skills."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Christian Howe", email = "cjhowe@users.noreply.github.com" }]
keywords = ["claude-code", "python", "ruff", "mypy", "uv", "pytest", "pypi"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/cjhowe-us/python-plugin"
Source   = "https://github.com/cjhowe-us/python-plugin"
Issues   = "https://github.com/cjhowe-us/python-plugin/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.7",
  "mypy>=1.11",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# This package is a Claude Code plugin (hook scripts + skills + manifest),
# not an importable Python module. Setuptools should ship the data files
# only — no `import claude_python_plugin` to discover.
[tool.setuptools]
py-modules = []
packages = []

[tool.setuptools.data-files]
"share/claude-plugins/python-plugin/.claude-plugin" = [".claude-plugin/plugin.json"]
"share/claude-plugins/python-plugin/hooks" = [
  "hooks/hooks.json",
  "hooks/_common.py",
  "hooks/posttooluse-ruff.py",
  "hooks/posttooluse-mypy.py",
  "hooks/posttooluse-pytest.py",
  "hooks/posttooluse-test-required.py",
  "hooks/posttooluse-uv-lock.py",
]
"share/claude-plugins/python-plugin/skills/python" = ["skills/python/SKILL.md"]
"share/claude-plugins/python-plugin/skills/python-ruff" = ["skills/python-ruff/SKILL.md"]
"share/claude-plugins/python-plugin/skills/python-mypy" = ["skills/python-mypy/SKILL.md"]
"share/claude-plugins/python-plugin/skills/python-uv" = ["skills/python-uv/SKILL.md"]
"share/claude-plugins/python-plugin/skills/python-pytest" = ["skills/python-pytest/SKILL.md"]
"share/claude-plugins/python-plugin/skills/python-pypi" = ["skills/python-pypi/SKILL.md"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "UP", "ANN"]
ignore = ["ANN401"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["hooks"]
mypy_path = "hooks"
explicit_package_bases = true
namespace_packages = true

[tool.pytest.ini_options]
testpaths = ["tests"]
